# MonsterUI

./: .gitignore  README.md  combine_themes.py  daisyui-themes.md  daisyui_themes.json  examples.fish  extract_daisyui_themes.py  extract_frankenui_themes.py  frankenui-themes.md  frankenui_themes.json  pyproject.toml  settings.ini  tailwind-themes.md  test_tailwind_extraction.py  theme-analysis.md  theme-extraction.json
docs/: llms-ctx-full.txt  llms-ctx.txt  main.py
docs/examples/: auth.py  cards.py  dashboard.py  playground.py  spinner_test.py  ticket.py  vite_built_assets_demo.py
monsterui/: _modidx.py  core.py  daisy.py  fixup.py  franken.py
nbs/: 01_core.ipynb  01_fixup.ipynb  02_franken.ipynb  03_daisy.ipynb
vite/: README.md  extract-franken-themes.mjs  extract_css.mjs  icon-normalizer.js  index.html  package.json  styles.css  tailwind.config.mjs  tailwind_test.html  test.html  themes.css  vite.config.ts
vite/outputs/: index.html  monsterui.css
