[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name="monsterui"
requires-python=">=3.10"
dynamic = [ "keywords", "description", "version", "dependencies", "optional-dependencies", "readme", "license", "authors", "classifiers", "entry-points", "scripts", "urls"]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "jinja2>=3.1.6",
    "llms-txt>=0.0.4",
    "pysymbol_llm>=0.0.5",
    "tinycss2>=1.4.0",
    "httpx>=0.28.1",
    "nbdev>=2.4.6",
    "ipykernel>=7.1.0",
]
[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "settings.ini" }, { file = "setup.py" }]
